Fix T66204, bevel numeric input respect scene units.